# oisol

./: .gitignore  Base.py  Dockerfile  LICENSE  README.md  build_and_push.yaml  discord_token.py  main.py  pyproject.toml  requirements.txt  ruff.toml  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_and_push.yaml  build_and_push_boisol.yaml  build_and_push_oisol.yaml  run_tests.yaml
modules/: CsvHandler.py  utils.py
modules/api_lector/: discord_api_lector.py
modules/base_upkeep/: base_status.py
modules/config/: ConfigEnums.py  ConfigInterfaces.py  ModuleConfig.py  entrypoint_config.py
modules/registre/: CsvHandlerRegistre.py  ModuleRegister.py  RegisterViewMenu.py  config.py  csv_handler.py  discord_registre.py  entrypoint_registre.py
modules/single_commands/: ModuleSingleCommands.py
modules/single_commdands/: ModuleSingleCommands.py  entrypoint_single_commands.py
modules/stockpile_viewer/: CreateStockpileInterface.py  CsvHandlerStockpiles.py  ModuleStockpile.py  StockpileCreatorMenu.py  StockpileViewerMenu.py  ViewAllStockpilesInterface.py  ViewSpecificStockpileInterface.py  csv_handler.py  discord_data_transmission.py  discord_stockpile_viewer.py  entrypoint_stockpile_viewer.py  google_sheet_commands.py  locations.py  stockpile_embed_generator.py  stockpile_viewer.py
modules/tank_stats/: tank_stats.py  tanks_names.json
modules/todolist/: ModuleTodolist.py  (+6 more)
saves/: bases.json
tests/: test_async_wiki_module.py  test_wiki_module.py  tests_wiki_module.py  wiki_module_tests.py
utils/: bases.py  config.py
(+88 files in other folders)
