[project]
name = "oisol"
dynamic = ["version"]
requires-python = ">= 3.13"
dependencies = [
  "aiohttp",
  "discord-py==2.6.4",
  "libretranslatepy",
  "python-dotenv",
  "requests",
]

[dependency-groups]
qa = [
  "pytest",
  "pytest-xdist",
  "pytest-asyncio",
  "ruff"
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
