[project]
name = "oisol"
dynamic = ["version"]
requires-python = ">= 3.13"
dependencies = [
  "aiohttp",
  "discord-py==2.6.4",
  "libretranslatepy",
  "python-dotenv",
  "thefuzz>=0.22.1",
]

[dependency-groups]
qa = [
  "pytest",
  "pytest-xdist",
  "ruff"
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
